# tombstone

./: .gitignore  README.md  attack.py  cockpit.py  demo.cast  pyproject.toml
demo/: demo.py  demo_agent_guardrail.py  demo_containment.py  demo_envelope.py  demo_langchain_agent.py  demo_lineage.py  demo_merkle.py  demo_proxy.py  injection_attack.py  runaway_agents.py
tests/: test_air_trajectory.py  test_security.py  test_trajectory_vector.py
tests/testdata/: canonical_vector.json
tombstone/: __init__.py  action_guard.py  easy.py  keystore.py  ledger.py  lineage.py  merkle.py  policy.py  proxy.py  trajectory.py  vault.py
tombstone/integrations/: __init__.py  air_trajectory.py  langchain.py
