[project]
name = "tombstone"
version = "0.6.0"
description = "Provable, crypto-shredded erasure on a tamper-evident ledger"
requires-python = ">=3.10"
dependencies = ["cryptography>=42.0"]
license = {text = "Apache-2.0"}

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
